# splix

./: .gitattributes  .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  ChangeLog  Dockerfile  INSTALL  README.md  TODO  build_log.txt  docker_tmp_runner.sh  module.mk  splix.speq  state_splix.speq
.agents/skills/splix/: SKILL.md
.agents/skills/splix/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: splix-instincts.yaml
.claude/skills/splix/: SKILL.md
.codex/: AGENTS.md
.githooks/: pre-push
.github/workflows/: Build Splix Drivers V3 (Clean Detection).yml  build-works-but-not-complete.yml  build.yml
artifacts/: splix-ubuntu-2.0.2-amd64.deb  splix-ubuntu-2.0.2-arm64.deb
build_clean/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  splix-2.0.2-amd64.deb  splix-2.0.2-amd64.rpm  splix_gtest  splix_gtest[1]_include.cmake  splix_gtest[1]_tests.cmake
build_clean/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/: control  md5sums
build_clean/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/usr/lib/cups/filter/: pstoqpdl  rastertoqpdl
build_clean/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/usr/share/cups/model/samsung/: clp310.ppd  clp310n.ppd  clp510.ppd  clp510pt.ppd  clp550fr.ppd  clx3160fr.ppd  m262x.ppd  m283x.ppd  ml1510pt.ppd  ml1610.ppd  ml1630fr.ppd  ml1640pt.ppd  ml1910.ppd  ml2165.ppd  ml2250.ppd  ml2251.ppd  ml2251pt.ppd  ml2550.ppd  ml2571.ppd  ml2580.ppd  ml3050.ppd  scx4100.ppd  scx4300.ppd  scx4521fpt.ppd  scx4623f.ppd  scx4623fw.ppd  scx4623fwfr.ppd  scx5330n.ppd  sf565ppt.ppd
build_clean/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/usr/share/cups/model/toshiba/: es180s.ppd
build_clean/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/usr/share/cups/model/xerox/: ph3116.ppd  ph3155pt.ppd  wcpe114e.ppd  wcpe16pt.ppd
build_clean/_CPack_Packages/Linux/RPM/: rpmbuildsplix.err  rpmbuildsplix.out
build_clean/_CPack_Packages/Linux/RPM/SPECS/: splix.spec
build_clean/_CPack_Packages/Linux/RPM/splix-2.0.2-amd64/usr/lib/cups/filter/: pstoqpdl
build_clean/_CPack_Packages/Linux/RPM/splix-2.0.2-amd64/usr/share/cups/model/dell/: 1110pt.ppd
build_clean/_CPack_Packages/Linux/RPM/splix-2.0.2-amd64/usr/share/cups/model/samsung/: clp200fr.ppd  clp310fr.ppd  clp310nfr.ppd  clp310npt.ppd  clp315.ppd  clp500pt.ppd  clp510fr.ppd  clp550pt.ppd  clp600.ppd  clx2170fr.ppd  ml1510.ppd  ml1610pt.ppd  ml1630pt.ppd  ml1660.ppd  ml2010fr.ppd  ml2160.ppd  ml2240pt.ppd  ml2251fr.ppd  ml2525pt.ppd  ml2550pt.ppd  ml2580pt.ppd  ml3051nd.ppd  ml3051pt.ppd  ml3310nd.ppd  scx4200pt.ppd  scx4600pt.ppd  sf565p.ppd
build_clean/_CPack_Packages/Linux/RPM/splix-2.0.2-amd64/usr/share/cups/model/xerox/: ph3115pt.ppd  ph3116fr.ppd  ph3116pt.ppd  ph3155.ppd  ph6100fr.ppd  ph6100pt.ppd  ph6110.ppd
build_cpack/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  splix-2.0.2-amd64.deb  splix_gtest  splix_gtest[1]_include.cmake  splix_gtest[1]_tests.cmake
build_cpack/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/: control  md5sums
build_cpack/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/usr/share/cups/model/dell/: 1100fr.ppd  1100pt.ppd
build_cpack/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/usr/share/cups/model/lexmark/: x215mfpfr.ppd
build_cpack/_CPack_Packages/Linux/DEB/splix-2.0.2-amd64/usr/share/cups/model/samsung/: scx3200pt.ppd  scx4216f.ppd  scx4521f.ppd  scx4521ffr.ppd  scx4600fr.ppd  scx5530fn.ppd
build_cpack/_CPack_Packages/Linux/RPM/: rpmbuildsplix.err  rpmbuildsplix.out
build_cpack/_CPack_Packages/Linux/RPM/RPMS/: splix-2.0.2-amd64.rpm
build_cpack/_CPack_Packages/Linux/RPM/splix-2.0.2-amd64/usr/lib/cups/filter/: rastertoqpdl
build_ppd/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  splix_gtest[1]_include.cmake
build_ppd_local/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake  pstoqpdl  rastertoqpdl  splix_gtest  splix_gtest[1]_include.cmake  splix_gtest[1]_tests.cmake
build_ppd_local/include/: version.h
build_verify/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  build.ninja  cmake_install.cmake  splix_gtest  splix_gtest[1]_include.cmake  splix_gtest[1]_tests.cmake
build_verify/Testing/Temporary/: CTestCostData.txt
build_verify/temp_home/.cups/: lpoptions
cmake/: SpliXCPack.cmake  SpliXHardening.cmake  toolchain-arm64.cmake  toolchain-armhf.cmake  toolchain-i386.cmake  toolchain-riscv64.cmake
docs/: wiki_architecture.md
docs/release_v2.0.2/: modernization_summary.md
include/: algo0x0d.h  algo0x0e.h  algo0x11.h  algo0x13.h  algo0x15.h  algorithm.h  band.h  bandplane.h  cache.h  compress.h  core.h  document.h  errlog.h  options.h  page.h  ppdfile.h  printer.h  qpdl.h  sp_portable.h  sp_result.h  sp_semaphore.h  version.h.in
ppd/: 1100.ppd  1100fr.ppd  1100pt.ppd  1110.ppd  1110fr.ppd  1110pt.ppd  clp200.ppd  clp200fr.ppd  clp200pt.ppd  clp300.ppd  clp300fr.ppd  clp300pt.ppd  clp310.ppd  clp310fr.ppd  clp310n.ppd  clp310nfr.ppd  clp310npt.ppd  clp310pt.ppd  clp315.ppd  clp315fr.ppd  clp315pt.ppd  clp500.ppd  clp500fr.ppd  clp500pt.ppd  clp510.ppd  clp510fr.ppd  clp510pt.ppd  clp550.ppd  clp550fr.ppd  clp550pt.ppd  clp600.ppd  clp600fr.ppd  clp600pt.ppd  clx216x.ppd  clx216xfr.ppd  clx216xpt.ppd  clx2170.ppd  clx2170fr.ppd  clx2170pt.ppd  clx3160.ppd  (+204 more)
scripts/: check_cpp23.sh
src/: algo0x0d.cpp  algo0x0e.cpp  algo0x11.cpp  algo0x13.cpp  algo0x15.cpp  band.cpp  bandplane.cpp  cache.cpp  colors.cpp  compress.cpp  core.cpp  document.cpp  page.cpp  ppdfile.cpp  printer.cpp  pstoqpdl.cpp  qpdl.cpp  rastertoqpdl.cpp  rendering.cpp  sp_semaphore.cpp
temp_home/cups/: lpoptions
tests/: functional_test.sh  run_tests_docker.ps1  run_tests_docker.sh  splix_gtest.cpp  test_build.sh  test_ci_docker.sh
(+50 files in other folders)
